Fix issue where login button was off screen

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@ body {
 .right {
   margin: 0;
   position: absolute;
-  right: -5%;
+  right: 5%;
 }
 
 .nav-item1 {
